k8s/nginx/nginx-chart/test-output.yaml
---
# Source: nginx-chart/templates/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-service
  namespace: bz-appy
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
# Source: nginx-chart/templates/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: bz-appy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: "beny14/nginx_static:latest"
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: nginx-data
          mountPath: /var/www/html
      volumes:
      - name: nginx-data
        persistentVolumeClaim:
          claimName: nginx-pvc   # Correctly referencing the PVC
---
# Source: nginx-chart/templates/nginx-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment-ingress
  namespace: bz-appy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ubuntu.myguest.virtualbox.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deployment-service
            port:
              number: 80
